fix: pages style

--- a/login.html
+++ b/login.html
@@ -647,9 +647,9 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-12">
-                <div class="site-logo-wrap">
+                <div class="site-logo-wrap footer-site-wrap">
                   <div class="get-support ltn__copyright-design clearfix">
-                    <div class="get-support-info">
+                    <div class="get-support-info footer-support">
                       <h6>Copyright & Design By</h6>
                       <a href="https://khanbutagroup.az/" target="_blank"
                         >Khan Buta Group</a
