--- a/index.html
+++ b/index.html
@@ -784,6 +784,26 @@
       </div>
       <!-- Car Table -->
 
+      <!-- map section -->
+      <section class="google-map">
+        <div
+          class="wow fadeInUp animated animated"
+          data-wow-duration="1500ms"
+          data-wow-delay="100ms"
+          style="
+            visibility: visible;
+            animation-duration: 1500ms;
+            animation-delay: 100ms;
+            animation-name: fadeInUp;
+          "
+        >
+          <iframe
+            src="https://www.google.com/maps/embed/v1/place?q=New+York,+NY,+USA&amp;key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"
+            class="google-map-one"
+          ></iframe>
+        </div>
+      </section>
+
       <!-- FOOTER AREA START (ltn__footer-2 ltn__footer-color-1) -->
       <footer class="ltn__footer-area ltn__footer-2 ltn__footer-color-1">
         <div
