--- a/index.html
+++ b/index.html
@@ -1221,7 +1221,7 @@
     <!-- Body main wrapper end -->
 
     <!-- MODAL AREA START (Newsletter Modal) -->
-    <!-- <div class="ltn__modal-area ltn__newsletter-popup-1 d-none----">
+    <div class="ltn__modal-area ltn__newsletter-popup-1 d-none----">
       <div class="modal fade" id="ltn__newsletter_popup" tabindex="-1">
         <div class="modal-dialog modal-lg" role="document">
           <div class="modal-content">
@@ -1297,7 +1297,7 @@
           </div>
         </div>
       </div>
-    </div>  -->
+    </div>  
     <!-- MODAL AREA END -->
 
     <!-- MODAL AREA START (Newsletter Modal) -->
