--- a/sms.html
+++ b/sms.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>Autixir - Car Services and Auto Mechanic HTML Template</title>
+    <title>Memmedoglu</title>
     <meta name="robots" content="noindex, follow" />
     <meta name="description" content="" />
     <meta
@@ -34,7 +34,7 @@
         <div class="ltn__header-top-area top-area-color-white">
           <div class="container">
             <div class="row">
-              <div class="col-md-7">
+              <div class="col-7">
                 <div class="ltn__top-bar-menu">
                   <ul>
                     <li>
@@ -43,7 +43,7 @@
                         ><i class="icon-mail"></i> info@webmail.com</a
                       >
                     </li>
-                    <li>
+                    <li class="ltn__top-bar-menu-location">
                       <a href="locations.html"
                         ><i class="icon-placeholder"></i> Fuad Əbdürəhmanov
                         küçəsi</a
@@ -52,10 +52,10 @@
                   </ul>
                 </div>
               </div>
-              <div class="col-md-5">
+              <div class="col-5">
                 <div class="top-bar-right text-end">
                   <div class="ltn__top-bar-menu">
-                    <ul>
+                    <ul class="ltn__top-bar-menu-lang">
                       <li>
                         <!-- ltn__language-menu -->
                         <div
@@ -76,7 +76,7 @@
                       <li>
                         <!-- ltn__social-media -->
                         <div class="ltn__social-media">
-                          <ul>
+                          <ul class="ltn__social-media-icons">
                             <li>
                               <a
                                 href="https://www.facebook.com/"
@@ -156,7 +156,7 @@
                     <div class="get-support-icon">
                       <i class="icon-call"></i>
                     </div>
-                    <div class="get-support-info">
+                    <div class="get-support-info phone-info">
                       <h6>Əlaqə</h6>
                       <h4><a href="tel:010 410 05 05">010-410-05-05</a></h4>
                     </div>
@@ -302,158 +302,22 @@
             </div>
             <button class="ltn__utilize-close">×</button>
           </div>
-          <div class="ltn__utilize-menu-search-form">
-            <form action="#">
-              <input type="text" placeholder="Search..." />
-              <button><i class="fas fa-search"></i></button>
-            </form>
-          </div>
-          <div class="ltn__utilize-menu">
-            <ul>
-              <li>
-                <a href="#">Home</a>
-                <ul class="sub-menu">
-                  <li><a href="index.html">Home Style - 01</a></li>
-                  <li><a href="index.html">Home Style - 02</a></li>
-                  <li><a href="index-3.html">Home Style - 03</a></li>
-                  <li><a href="index-4.html">Home Style - 04</a></li>
-                  <li>
-                    <a href="index-5.html"
-                      >Home Style - 05
-                      <span class="menu-item-badge">video</span></a
-                    >
-                  </li>
-                  <li><a href="index-6.html">Home Style - 06</a></li>
-                  <li><a href="index-7.html">Home Style - 07</a></li>
-                  <li>
-                    <a href="index-8.html"
-                      >Home Style - 08
-                      <span class="menu-item-badge">Map</span></a
-                    >
-                  </li>
-                  <li><a href="index-9.html">Home Style - 09</a></li>
-                  <li><a href="index-10.html">Home Style - 10</a></li>
-                  <li><a href="index-11.html">Home Style - 11</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">About</a>
-                <ul class="sub-menu">
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="service.html">Services</a></li>
-                  <li><a href="service-details.html">Service Details</a></li>
-                  <li><a href="portfolio.html">Portfolio</a></li>
-                  <li><a href="portfolio-2.html">Portfolio - 02</a></li>
-                  <li>
-                    <a href="portfolio-details.html">Portfolio Details</a>
-                  </li>
-                  <li><a href="team.html">Team</a></li>
-                  <li><a href="team-details.html">Team Details</a></li>
-                  <li><a href="faq.html">FAQ</a></li>
-                  <li><a href="locations.html">Google Map Locations</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">Shop</a>
-                <ul class="sub-menu">
-                  <li><a href="shop.html">Shop</a></li>
-                  <li><a href="shop-grid.html">Shop Grid</a></li>
-                  <li>
-                    <a href="shop-left-sidebar.html">Shop Left sidebar</a>
-                  </li>
-                  <li>
-                    <a href="shop-right-sidebar.html">Shop right sidebar</a>
-                  </li>
-                  <li><a href="product-details.html">Shop details </a></li>
-                  <li><a href="product-details-2.html">Shop details 02</a></li>
-                  <li><a href="shop-car-grid.html">Shop Car Grid</a></li>
-                  <li>
-                    <a href="shop-car-left-sidebar.html"
-                      >Shop Car Left sidebar</a
-                    >
-                  </li>
-                  <li>
-                    <a href="shop-car-right-sidebar.html"
-                      >Shop Car right sidebar</a
-                    >
-                  </li>
-                  <li>
-                    <a href="product-details-3.html">Shop Car details </a>
-                  </li>
-                  <li><a href="cart.html">Cart</a></li>
-                  <li><a href="wishlist.html">Wishlist</a></li>
-                  <li><a href="checkout.html">Checkout</a></li>
-                  <li><a href="order-tracking.html">Order Tracking</a></li>
-                  <li><a href="account.html">My Account</a></li>
-                  <li><a href="login.html">Sign in</a></li>
-                  <li><a href="register.html">Register</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">News</a>
-                <ul class="sub-menu">
-                  <li><a href="blog.html">News</a></li>
-                  <li><a href="blog-grid.html">News Grid</a></li>
-                  <li>
-                    <a href="blog-left-sidebar.html">News Left sidebar</a>
-                  </li>
-                  <li>
-                    <a href="blog-right-sidebar.html">News Right sidebar</a>
-                  </li>
-                  <li><a href="blog-details.html">News details</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="#">Pages</a>
-                <ul class="sub-menu">
-                  <li><a href="about.html">About</a></li>
-                  <li><a href="service.html">Services</a></li>
-                  <li><a href="service-details.html">Service Details</a></li>
-                  <li><a href="portfolio.html">Portfolio</a></li>
-                  <li><a href="portfolio-2.html">Portfolio - 02</a></li>
-                  <li>
-                    <a href="portfolio-details.html">Portfolio Details</a>
-                  </li>
-                  <li><a href="team.html">Team</a></li>
-                  <li><a href="team-details.html">Team Details</a></li>
-                  <li><a href="faq.html">FAQ</a></li>
-                  <li><a href="history.html">History</a></li>
-                  <li><a href="appointment.html">Appointment</a></li>
-                  <li><a href="locations.html">Google Map Locations</a></li>
-                  <li><a href="404.html">404</a></li>
-                  <li><a href="contact.html">Contact</a></li>
-                  <li><a href="coming-soon.html">Coming Soon</a></li>
-                </ul>
-              </li>
-              <li><a href="contact.html">Contact</a></li>
-            </ul>
-          </div>
           <div class="ltn__utilize-buttons ltn__utilize-buttons-2">
             <ul>
               <li>
-                <a href="account.html" title="My Account">
+                <a href="login.html" title="login">
                   <span class="utilize-btn-icon">
                     <i class="far fa-user"></i>
                   </span>
-                  My Account
+                  Daxil ol
                 </a>
               </li>
               <li>
-                <a href="wishlist.html" title="Wishlist">
+                <a href="register.html" title="register">
                   <span class="utilize-btn-icon">
-                    <i class="far fa-heart"></i>
-                    <sup>3</sup>
+                    <i class="fa-regular fa-id-card"></i>
                   </span>
-                  Wishlist
-                </a>
-              </li>
-              <li>
-                <a href="cart.html" title="Shoping Cart">
-                  <span class="utilize-btn-icon">
-                    <i class="fas fa-shopping-cart"></i>
-                    <sup>5</sup>
-                  </span>
-                  Shoping Cart
+                  Qeydiyyat
                 </a>
               </li>
             </ul>
@@ -461,19 +325,51 @@
           <div class="ltn__social-media-2">
             <ul>
               <li>
-                <a href="#" title="Facebook"
+                <a
+                  href="https://www.facebook.com/"
+                  title="Facebook"
+                  target="_blank"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
               </li>
               <li>
-                <a href="#" title="Twitter"><i class="fab fa-twitter"></i></a>
+                <a
+                  href="https://x.com/i/flow/login"
+                  title="Twitter"
+                  target="_blank"
+                  ><i class="fab fa-twitter"></i
+                ></a>
               </li>
+
               <li>
-                <a href="#" title="Linkedin"><i class="fab fa-linkedin"></i></a>
+                <a
+                  href="https://www.whatsapp.com/"
+                  title="Whatsapp"
+                  target="_blank"
+                  ><i class="fab fa-whatsapp"></i
+                ></a>
               </li>
+
               <li>
-                <a href="#" title="Instagram"
+                <a href="https://www.tiktok.com/" title="Tiktok" target="_blank"
+                  ><i class="fab fa-tiktok"></i
+                ></a>
+              </li>
+
+              <li>
+                <a
+                  href="https://www.instagram.com/"
+                  title="Instagram"
+                  target="_blank"
                   ><i class="fab fa-instagram"></i
+                ></a>
+              </li>
+              <li>
+                <a
+                  href="https://www.linkedin.com/feed/"
+                  title="Linkedin"
+                  target="_blank"
+                  ><i class="fab fa-linkedin"></i
                 ></a>
               </li>
             </ul>
@@ -506,7 +402,7 @@
       </div>
       <!-- BREADCRUMB AREA END -->
 
-      <!-- LOGIN AREA START (Register) -->
+      <!-- SMS AREA START -->
       <div class="ltn__sms-area sms-code-wrapper pb-110">
         <div class="container">
           <div class="col-lg-6 col-md-12">
@@ -526,7 +422,7 @@
           </div>
         </div>
       </div>
-      <!-- LOGIN AREA END -->
+      <!-- SMS AREA END -->
 
       <!-- FOOTER AREA START (ltn__footer-2 ltn__footer-color-1) -->
       <footer class="ltn__footer-area ltn__footer-2 ltn__footer-color-1">
