feat:add about sec

--- a/sms.html
+++ b/sms.html
@@ -434,7 +434,11 @@
             <div class="row">
               <div class="col-xl-4 col-md-5">
                 <div class="footer-widget footer-about-widget clearfix">
-                  <h4 class="footer-title">About Us.</h4>
+                  <div class="site-logo footer-logo">
+                    <a href="index.html"
+                      ><img src="img/logo-2.png" alt="Logo"
+                    /></a>
+                  </div>
                   <p>
                     Corporate clients and leisure travelers has been relying on
                     <a href="contact.html">Groundlink</a> for dependable, safe,
@@ -463,6 +467,19 @@
               <div class="col-xl-4 col-md-6">
                 <div class="footer-widget footer-blog-widget">
                   <h4 class="footer-title">Əlaqə</h4>
+                  <div class="footer_contact">
+                    <ul>
+                      <li>
+                        <div class="footer-item">
+                          <i class="fa-solid fa-phone"></i>
+                          <div class="footer_contact_w">
+                            <span>Phone:</span>
+                            <a href="tel:010-410-05-05">010-410-05-05</a>
+                          </div>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
                   <div class="ltn__social-media-4">
                     <ul>
                       <li>
