--- a/register.html
+++ b/register.html
@@ -403,7 +403,7 @@
       <!-- BREADCRUMB AREA END -->
 
       <!-- REGISTER AREA START -->
-      <div class="ltn__login-area pb-110">
+      <div class="ltn__login-area pb-60">
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
@@ -457,7 +457,11 @@
             <div class="row">
               <div class="col-xl-4 col-md-5">
                 <div class="footer-widget footer-about-widget clearfix">
-                  <h4 class="footer-title">About Us.</h4>
+                  <div class="site-logo footer-logo">
+                    <a href="index.html"
+                      ><img src="img/logo-2.png" alt="Logo"
+                    /></a>
+                  </div>
                   <p>
                     Corporate clients and leisure travelers has been relying on
                     <a href="contact.html">Groundlink</a> for dependable, safe,
@@ -486,6 +490,19 @@
               <div class="col-xl-4 col-md-6">
                 <div class="footer-widget footer-blog-widget">
                   <h4 class="footer-title">Əlaqə</h4>
+                  <div class="footer_contact">
+                    <ul>
+                      <li>
+                        <div class="footer-item">
+                          <i class="fa-solid fa-phone"></i>
+                          <div class="footer_contact_w">
+                            <span>Phone:</span>
+                            <a href="tel:010-410-05-05">010-410-05-05</a>
+                          </div>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
                   <div class="ltn__social-media-4">
                     <ul>
                       <li>
