--- a/index.html
+++ b/index.html
@@ -990,97 +990,7 @@
     <!-- Body main wrapper end -->
 
     <!-- MODAL AREA START (Newsletter Modal) -->
-    <!-- <div class="ltn__modal-area ltn__newsletter-popup-1 d-none----">
-      <div class="modal fade" id="ltn__newsletter_popup" tabindex="-1">
-        <div class="modal-dialog modal-lg" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button
-                type="button"
-                class="close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              >
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div class="modal-body">
-              <div class="ltn__newsletter-popup-item">
-                <div class="row">
-                  <div class="col-12 col-lg-6">
-                    <div class="ltn__newsletter-popup-img">
-                      <img src="img/banner/newsletter-popup-1.jpg" alt="#" />
-                    </div>
-                  </div>
-                  <div class="col-12 col-lg-6 align-self-center">
-                    <div class="ltn__newsletter-popup-info">
-                      <h2>Maşının nömrəsi</h2>
-                      <form
-                        action="#"
-                        class="ltn__newsletter-popup-form"
-                        id="carNumberForm"
-                      >
-                        <div
-                          class="input-item input-item-email ltn__custom-icon"
-                        >
-                          <input
-                            type="text"
-                            id="carNumberInput"
-                            placeholder="Maşının nömrəsini qeyd edin"
-                            pattern="[0-9]{2}[A-Za-z]{2}[0-9]{3}"
-                            title="Zəhmət olmasa maşının nömrəsini qeyd edin"
-                            required
-                          />
-                        </div>
-                        <div
-                          id="errorMessage"
-                          style="color: red; display: none"
-                        >
-                          Zəhmət olmasa maşının nömrəsini düzgün formatda qeyd
-                          edin
-                        </div>
-                        <div class="btn-wrapper">
-                          <button
-                            type="submit"
-                            class="btn theme-btn-3 btn-effect-4 text-uppercase"
-                          >
-                            Axtar
-                          </button>
-                        </div>
-                      </form>
-                    </div>
-                    <div class="additional-info d-none">
-                      <p>
-                        We want to give you <b>10% discount</b> for your first
-                        order, <br />
-                        Use discount code at checkout
-                      </p>
-                      <div class="payment-method">
-                        <img src="img/icons/payment.png" alt="#" />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div> -->
-    <!-- MODAL AREA END -->
-
-    <!-- Modal Trigger Button -->
-    <button
-      type="button"
-      class="btn btn-primary"
-      data-bs-toggle="modal"
-      data-bs-target="#ltn__newsletter_popup"
-    >
-      Maşının nömrəsini qeyd edin
-    </button>
-
-    <!-- Modal -->
-    <div class="ltn__modal-area ltn__newsletter-popup-1">
+    <div class="ltn__modal-area ltn__newsletter-popup-1 d-none----">
       <div class="modal fade" id="ltn__newsletter_popup" tabindex="-1">
         <div class="modal-dialog modal-lg" role="document">
           <div class="modal-content">
@@ -1157,6 +1067,7 @@
         </div>
       </div>
     </div>
+    <!-- MODAL AREA END -->
 
     <!-- All JS Plugins -->
     <script src="js/plugins.js"></script>
